# yandex-ads-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py  test_safety.py  tools_direct_extra.py  tools_metrika.py
deploy/: run-readonly.sh  smoke_readonly.py  yandex-ads-mcp.env.example
docs/: directops-integration.md
