[project]
name = "yandex-ads-mcp"
version = "1.0.0"
description = "MCP server for Yandex Direct API, Yandex Metrika API, and Wordstat API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
yandex-ads-mcp = "server:main_sync"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
